<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/size_32"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="IVIP FOR USER"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_38" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="2"
                android:paddingLeft="@dimen/size_16"
                android:paddingRight="@dimen/size_16"
                android:text="Tận hưởng thế giới mua sắm trong tay"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_18" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_32"
        android:orientation="vertical"
        android:paddingLeft="@dimen/size_16"
        android:paddingRight="@dimen/size_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_16"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:background="#ffffff" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/action_login_with"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/font_18" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.54"
                android:background="#ffffff" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_phone_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48"
            android:layout_marginBottom="@dimen/size_10"
            android:background="@drawable/button_nomal"
            android:text="@string/action_login_phone"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_facebook_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48"
            android:background="@drawable/facebook_button"
            android:drawableLeft="@drawable/ic_action_login_facebook"
            android:elevation="@dimen/size_6"
            android:ellipsize="marquee"
            android:paddingRight="40dp"
            android:singleLine="true"
            android:text="@string/action_login_facebook"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>